@@ -1,5 +1,6 @@
 ---version 2.0.2 released---
 
+06-aug-2008 - zeromus - add lagcounter and lagflag to savestate
 06-aug-2008 - zeromus - SF case 2040448  (View Slots bug - does not include new savestate naming)
 06-aug-2008 - zeromus - restore the debugger snap functionality
 06-aug-2008 - zeromus - add memory.readbyterange to emulua
